--- a/styles.css
+++ b/styles.css
@@ -290,8 +290,7 @@ margin-bottom: 20px;
   color:#0b4237;
   box-sizing: border-box;
   position:relative;
-  margin-left: 600px;
-
+  left:30%;
 }
 
 .blockquote-credit{
